hphp/hack/test/typecheck/function_pointer/reified_targs_newable2.php.exp
File "reified_targs_newable2.php", line 12, characters 8-10:
Some type constraint(s) here are violated (Typing[4323])
  File "reified_targs_newable2.php", line 5, characters 34-34:
  `T` is a constrained type parameter
  File "reified_targs_newable2.php", line 5, characters 41-46:
  Expected `string`
  File "reified_targs_newable2.php", line 5, characters 41-46:
  This type argument to `A` must match exactly (it is invariant)
  File "reified_targs_newable2.php", line 12, characters 14-16:
  But got `int`
